# robotiq

./: README.md
robotiq_2f_85_gripper_description/: package.xml  visualize.rviz
robotiq_2f_85_gripper_description/launch/: load_robotiq_2f_85.launch  view_robotiq_2f_85.launch
robotiq_2f_85_gripper_description/meshes/collision/: robotiq_arg2f_85_cable_protector.stl  robotiq_arg2f_85_coupler.stl
robotiq_2f_85_gripper_description/meshes/visual/: robotiq_arg2f_85_cable_protector.stl  robotiq_arg2f_85_coupler.stl
robotiq_2f_85_gripper_description/urdf/: robotiq_arg2f_85.xacro  robotiq_arg2f_85_macro.xacro
robotiq_2f_85_gripper_description/urdf/inc/: robotiq_arg2f_85_gazebo.xacro
robotiq_2f_85_gripper_gazebo/config/: robotiq_2f_85_gripper_controllers.yaml
robotiq_2f_85_gripper_gazebo/launch/inc/: load_robotiq_2f_85_gripper.launch
robotiq_2f_85_gripper_gazebo/urdf/: robotiq_arg2f_85.xacro  robotiq_arg2f_85_macro.xacro
robotiq_2f_85_gripper_visualization/urdf/: robotiq_arg2f_85_macro.xacro
robotiq_2f_gripper_action_server/include/robotiq_2f_gripper_action_server/: robotiq_2f_gripper_action_server.h
robotiq_2f_gripper_action_server/launch/: robotiq_2f_gripper_action_server.launch
robotiq_2f_gripper_action_server/src/: robotiq_2f_gripper_action_server.cpp  robotiq_2f_gripper_action_server_client_test.cpp  robotiq_2f_gripper_action_server_node.cpp
robotiq_2f_gripper_control/: CMakeLists.txt  package.xml
robotiq_2f_gripper_control/launch/: robotiq_2f_85_gripper_rtu.launch
robotiq_2f_gripper_control/nodes/: Robotiq2FGripperRtuNode.py
(+1 files in other folders)
